Base Introduction Created

--- a/01jvankirk20.html
+++ b/01jvankirk20.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Introduction</title>
   </head>
   <body>
 
-    <h1>This is a heading</h1>
-    <p>This is a paragraph</p>
+    <h1>The Cat Bandits:Dobby and Shady</h1>
+    <p>Welcome to the fan page for the Dobby and Shady! They are the cutest but most menical bandits around. They have robbed over 20 banks and jewlery shops.</p>
 
   </body>
 </html>
