Some more description added in the intro

--- a/01jvankirk20.html
+++ b/01jvankirk20.html
@@ -6,7 +6,7 @@
   <body>
 
     <h1>The Cat Bandits: Dobby and Shady</h1>
-    <p>Welcome to the fan page for the Dobby and Shady! They are the cutest but most menical bandits around. They have robbed over 20 banks and jewlery shops.</p>
+    <p>Welcome to the fan page for Dobby and Shady! They are the cutest but most menacing bandits around. They have robbed over 20 banks and have taken almost 5 lives. They are on the top of the FBI's Most Wanted list, so look out for them in your neighborhood.</p>
 
   </body>
 </html>
