--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
 
     <h1 style="border:2px solid DarkGoldenRod; color:AliceBlue;">The Cat Bandits: Dobby and Shady</h1>
+    <img src="cape.gif" alt="Jaidyn" width="600" height="400">
+    <h1> VS </h1>
     <img src="IMG_7615.JPG" alt="Dobby Photo" width="480" height="896"> <img src="IMG_7616.JPG" alt="Shady Photo" width="480 height="896">
     <p>Welcome to the fan page for Dobby and Shady! They are the cutest but most menacing bandits around. They have robbed over 20 banks and have taken almost 5 lives. They are on the top of the FBI's Most Wanted list for their crimes, so look out for them in your neighborhood.</p> 
 
