--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
 
     <h1 style="border:2px solid DarkGoldenRod; color:AliceBlue;">Jaidyn And The Cat Bandits(Dobby and Shady)</h1>
-    <a href ="bio.html"><p>Biograpghy</p></a>
+    <a href ="bio.html"><p>Biograpghy </p></a><a href="adventure.html"><p>Adventure </p></a>
     <img src="cape.gif" alt="Jaidyn" width="600" height="400">
     <h1> VS </h1>
     <img src="IMG_7615.JPG" alt="Dobby Photo" width="480" height="896"> <img src="IMG_7616.JPG" alt="Shady Photo" width="480 height="896">
