Added first adventure and finally deleted 01jvankirk20

--- a/adventure.html
+++ b/adventure.html
@@ -7,5 +7,7 @@
 
     <h1>Adventures of Captain Jaidyn</h1>
     <a href="index.html"><p>Main</p></a>
+    <h3>Recent Defeat</h3>
+    <p>A few days ago, Captain Jaidyn was defeated by the Cat Burglers again. After robbing the Chase bank, the cat bandits went to make an escape when they came face to face with Captain Jaidyn in an alleyway. Before Jaidyn could use any of her special moves, Dobby Hypnotized her with his cloudy eye of mystery, which gave Shady times to use his claws of terror. These moves allowed them to make their great escape. Beware, they could still be in the Sherman area.</p>
   </body>
 </html>
