Added 1st Story

--- a/misc.html
+++ b/misc.html
@@ -5,6 +5,11 @@
   </head>
   <body>
     <h1>Miscellaneous</h1>
+    <p>Here is a little more about Captain Jaidyn!</p>
     <a href="index.html"><p>Main</p><a/>
+      <h3>Aussies</h3>
+      <img src="Dance.jpeg" alt="Dance" width="1000" height="667">
+      <p>Captain Jaidyn has been on the Aussies Dance Team for over 2 years and has been captain since the fall of 2022. Jaidyn loves dancing and has leaps that can compare to no other literally. She is looking forward to making final preparations for this year's Aussies Spring Show "Lost in Space." The dates are April 21, 22, and 23.</p>
+      
   </body>
 </html>
