Added Squishmallow story

--- a/misc.html
+++ b/misc.html
@@ -10,6 +10,11 @@
       <h3>Aussies</h3>
       <img src="Dance.jpeg" alt="Dance" width="1000" height="667">
       <p>Captain Jaidyn has been on the Aussies Dance Team for over 2 years and has been captain since the fall of 2022. Jaidyn loves dancing and has leaps that can compare to no other literally. She is looking forward to making final preparations for this year's Aussies Spring Show "Lost in Space." The dates are April 21, 22, and 23.</p>
+      <h3>Squishmallow Collector</h3>
+	  <img src="Dino.JPG" alt="Dino" width="400" height="747" >
+	  <img src="Cupcake.JPG" alt="Cupcake" width="400" height="747">
+	  <img src="Dog.JPG" alt="Dog" width="400" height="747">
+	  <p>Captain Jaidyn's more recent hobby she has picked up is collecting squishmallows. She started collecting them around a year ago and has created quite the collection.</p>
       
   </body>
 </html>
