--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html style="background-color:CornflowerBlue;">
+<html>
   <head>
     <title>Introduction</title>
+    <style>
+html {
+	  background-color:CornflowerBlue;
+      }
+      h1{
+	  text-align: center;
+	  color: AliceBlue;
+	  font-family:luminari;
+	  border:2px solid DarkGoldenRod;
+      }
+      img{
+	  display:block;
+	  margin-left:auto;
+	  margin-right:auto;
+	  width:50%;
+      }
+      p{
+	  font-family:luminari;
+      }
+      </style>
   </head>
   <body>
 
-    <h1 style="border:2px solid DarkGoldenRod; color:AliceBlue;">Jaidyn And The Cat Bandits(Dobby and Shady)</h1>
+    <h1>Jaidyn And The Cat Bandits(Dobby and Shady)</h1>
     <a href ="bio.html"><p>Biograpghy </p></a><a href="adventure.html"><p>Adventure </p></a> <a href="misc.html"><p>Miscellaneous</p></a>
     <img src="cape.gif" alt="Jaidyn" width="600" height="400">
     <h1> VS </h1>
