This is my bad attempt at boot strap. I couldn't figure it out. I am coming to office hours.

--- a/misc.html
+++ b/misc.html
@@ -1,7 +1,20 @@
+
 <!DOCTYPE html>
-<html style="background-color:Aquamarine;">
+<html>
   <head>
-    <title>Miscellaneous</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+     <title>Miscellaneous</title>
+    <style>
+      I couldn't figure out global variables.
+      @font-family-base: luminari;
+      @color: Aquamarine;
+      html{
+	  background-color: Aquamarine;
+      }
+      body{
+	  font-family: luminari;
+      }
+    </style>
   </head>
   <body>
     <h1>Miscellaneous</h1>
