--- a/adventure.html
+++ b/adventure.html
@@ -2,38 +2,15 @@
 <html>
   <head>
     <title>Adventure</title>
-    <style>
-      html {
-	  background-color:Lavender;
-      }
-      h1{
-	  text-align: center;
-	  color: white;
-	  font-family:luminari;
-      }
-      h3{
-	  color:DarkGrey;
-	  font-family:luminari;
-	  text-align: center;
-      }
-      img{
-	  display:block;
-	  margin-left:auto;
-	  margin-right:auto;
-	  width:50%;
-      }
-      p{
-	  font-family:luminari;
-      }
-     </style>
+    <link href="adventureStyle.css" type="text/css" rel="styleSheet" media="screen" />
   </head>
   <body>
     <a href="index.html"><p>Main</p></a>
     <h1>Adventures of Captain Jaidyn</h1>
-    <h3>Recent Defeat</h3>
+    <h2>Recent Defeat</h3>
     <img src="kapow.gif" alt="Shady's Claws of Terror" width="864" height="864">
     <p>A few days ago, the Cat Burglers got away again. After robbing the Chase bank, the cat bandits went to make an escape when they came face to face with Captain Jaidyn in an alleyway. Before Jaidyn could use any of her special moves, Dobby Hypnotized her with his cloudy eye of mystery, which gave Shady times to use his claws of terror. These moves allowed them to make their great escape. Beware, they could still be in the Sherman area.</p>
-    <h3>Tensions Rising</h3>
+    <h2>Tensions Rising</h3>
     <img src="Jaidyn.jpg" alt="Contemplating Jaidyn" width="400" height="416">
     <p></p>
     <img src="EvilShady.jpg" alt="Evil Shady" width="400" height="583">
