Added navigation bar and added style adventure style to index

--- a/adventure.html
+++ b/adventure.html
@@ -5,7 +5,9 @@
     <link href="adventureStyle.css" type="text/css" rel="styleSheet" media="screen" />
   </head>
   <body>
-    <a href="index.html"><p>Main</p></a>
+    <div class="topnav">
+      <a href="index.html"><p>Main</p></a>
+    </div>
     <h1>Adventures of Captain Jaidyn</h1>
     <h2>Recent Defeat</h3>
     <img src="kapow.gif" alt="Shady's Claws of Terror" width="864" height="864">
