--- a/index.html
+++ b/index.html
@@ -2,31 +2,22 @@
 <html>
   <head>
     <title>Introduction</title>
+     <link href="adventureStyle.css" type="text/css" rel="styleSheet" media="screen" />
     <style>
-html {
+      html {
 	  background-color:CornflowerBlue;
       }
       h1{
-	  text-align: center;
 	  color: AliceBlue;
-	  font-family:luminari;
 	  border:2px solid DarkGoldenRod;
-      }
-      img{
-	  display:block;
-	  margin-left:auto;
-	  margin-right:auto;
-	  width:50%;
-      }
-      p{
-	  font-family:luminari;
       }
       </style>
   </head>
   <body>
-
+    <div class="topnav">
+       <a href ="bio.html"><p>Biograpghy </p></a><a href="adventure.html"><p>Adventure </p></a> <a href="misc.html"><p>Miscellaneous</p></a>
+     </div>
     <h1>Jaidyn And The Cat Bandits(Dobby and Shady)</h1>
-    <a href ="bio.html"><p>Biograpghy </p></a><a href="adventure.html"><p>Adventure </p></a> <a href="misc.html"><p>Miscellaneous</p></a>
     <img src="cape.gif" alt="Jaidyn" width="600" height="400">
     <h1> VS </h1>
     <img src="IMG_7615.JPG" alt="Dobby Photo" width="480" height="896"> <img src="IMG_7616.JPG" alt="Shady Photo" width="480 height="896">
