Stylized .css images

--- a/adventure.html
+++ b/adventure.html
@@ -11,11 +11,16 @@
     <h1>Adventures of Captain Jaidyn</h1>
     <h2>Recent Defeat</h3>
     <img src="kapow.gif" alt="Shady's Claws of Terror" width="864" height="864">
-    <p>A few days ago, the Cat Burglers got away again. After robbing the Chase bank, the cat bandits went to make an escape when they came face to face with Captain Jaidyn in an alleyway. Before Jaidyn could use any of her special moves, Dobby Hypnotized her with his cloudy eye of mystery, which gave Shady times to use his claws of terror. These moves allowed them to make their great escape. Beware, they could still be in the Sherman area.</p>
-    <h2>Tensions Rising</h3>
+<p>A few days ago, the Cat Burglers got away again. After robbing the Chase bank, the cat bandits went to make an escape when they came face to face with Captain Jaidyn in an alleyway. Before Jaidyn could use any of her special moves, Dobby Hypnotized her with his cloudy eye of mystery, which gave Shady times to use his claws of terror. These moves allowed them to make their great escape. Beware, they could still be in the Sherman area.</p>
+<h2>Tensions Rising</h3>
+<div class="row">
+  <div class="column">
     <img src="Jaidyn.jpg" alt="Contemplating Jaidyn" width="400" height="416">
-    <p></p>
-    <img src="EvilShady.jpg" alt="Evil Shady" width="400" height="583">
+  </div>
+  <div class="column">
+    <img class="Shady" src="EvilShady.jpg" alt="Evil Shady" width="400" height="583">
+  </div>
+</div>	      
     <p>Captain Jaidyn and the Cat Bandits have not crossed paths recently, but that does not mean Shady and Dobby are not causing mischief. After breaking into the Austin College Adam's Center, they visited students with cat allergies. Two people were hospitalized with valuables taken, and five more suffered allergic reactions.</p>
   </body>
 </html>
