--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	  color: AliceBlue;
 	  border:2px solid DarkGoldenRod;
       }
+      img{
+	  border-radius: 75%;
+      }
       </style>
   </head>
   <body>
@@ -20,7 +23,15 @@
     <h1>Jaidyn And The Cat Bandits(Dobby and Shady)</h1>
     <img src="cape.gif" alt="Jaidyn" width="600" height="400">
     <h1> VS </h1>
-    <img src="IMG_7615.JPG" alt="Dobby Photo" width="480" height="896"> <img src="IMG_7616.JPG" alt="Shady Photo" width="480 height="896">
+    <div class="row">
+      <div class="column">
+	<img src="IMG_7615.JPG" alt="Dobby Photo" width="240px" height="448px">
+    </div>
+    <div class="column">
+      <img src="IMG_7616.JPG" alt="Shady Photo" width="240px" height="448px">
+    </div>
+</div>
+
     <p>Welcome to the fan page for Captain Jaidyn! When Jaidyn is not tackling her 50 million responsibilities on campus, she is fighting her biggest enemies: Dobby and Shady. They are the cutest but most menacing bandits around. They have robbed over 20 banks and have taken almost 5 lives. They are on the top of the FBI's Most Wanted list for their crimes, and Jaidyn wants to stop them before they take over the world.</p> 
   <audio controls autoplay>
     <source src="Superman.mp3" type="audio/mpeg">
