--- a/misc.html
+++ b/misc.html
@@ -1,33 +1,38 @@
 
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>Miscellaneous</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="styleSheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Miscellaneous</title>
     <style>
-      I couldn't figure out global variables.
-      @font-family-base: luminari;
-      @color: Aquamarine;
-      html{
-	  background-color: Aquamarine;
-      }
       body{
 	  font-family: luminari;
       }
     </style>
   </head>
   <body>
+    <div class="container-fluid">
+    <div class="row">
+    <div class="col-lg-1">
+      <a href="index.html"><p>Main</p></a>
+    </div>
+    <div class="col-lg-11" style="background-color: Aquamarine;">
     <h1>Miscellaneous</h1>
     <p>Here is a little more about Captain Jaidyn!</p>
-    <a href="index.html"><p>Main</p><a/>
-      <h3>Aussies</h3>
-      <img src="Dance.jpeg" alt="Dance" width="1000" height="667">
+      <h3 class="text-muted">Aussies</h3>
+      <img src="Dance.jpeg" alt="Dance" width="500" height="334">
       <p>Captain Jaidyn has been on the Aussies Dance Team for over 2 years and has been captain since the fall of 2022. Jaidyn loves dancing and has leaps that can compare to no other literally. She is looking forward to making final preparations for this year's Aussies Spring Show "Lost in Space." The dates are April 21, 22, and 23.</p>
-      <h3>Squishmallow Collector</h3>
+      <h3 class="text-muted">Squishmallow Collector</h3>
 	  <img src="Dino.JPG" alt="Dino" width="400" height="747" >
 	  <img src="Cupcake.JPG" alt="Cupcake" width="400" height="747">
 	  <img src="Dog.JPG" alt="Dog" width="400" height="747">
-	  <p>Captain Jaidyn's more recent hobby she has picked up is collecting squishmallows. She started collecting them around a year ago and has created quite the collection.</p>
-      
+    <p>Captain Jaidyn's more recent hobby she has picked up is collecting squishmallows. She started collecting them around a year ago and has created quite the collection.</p>
+    </div>
+    </div>
+    </div>
   </body>
 </html>
