Messed with background colors and font

--- a/misc.html
+++ b/misc.html
@@ -11,22 +11,23 @@
     <style>
       body{
 	  font-family: luminari;
+	  color: LightPink;
       }
     </style>
   </head>
   <body>
     <div class="container-fluid">
     <div class="row">
-    <div class="col-lg-1">
+    <div class="col-lg-1" style="background-color: LightPink;">
       <a href="index.html"><p>Main</p></a>
     </div>
-    <div class="col-lg-11" style="background-color: Aquamarine;">
-    <h1>Miscellaneous</h1>
-    <p>Here is a little more about Captain Jaidyn!</p>
-      <h3 class="text-muted">Aussies</h3>
+    <div class="col-lg-11" style="background-color: DarkGreen;">
+    <h1 class="text-center">Miscellaneous</h1>
+    <h4 class= "text-center">Here is a little more about Captain Jaidyn!</p>
+      <h3 class="text-center">Aussies</h3>
       <img src="Dance.jpeg" alt="Dance" width="500" height="334">
       <p>Captain Jaidyn has been on the Aussies Dance Team for over 2 years and has been captain since the fall of 2022. Jaidyn loves dancing and has leaps that can compare to no other literally. She is looking forward to making final preparations for this year's Aussies Spring Show "Lost in Space." The dates are April 21, 22, and 23.</p>
-      <h3 class="text-muted">Squishmallow Collector</h3>
+      <h3 class="text-center">Squishmallow Collector</h3>
 	  <img src="Dino.JPG" alt="Dino" width="400" height="747" >
 	  <img src="Cupcake.JPG" alt="Cupcake" width="400" height="747">
 	  <img src="Dog.JPG" alt="Dog" width="400" height="747">
