Made Changes to button that returns home

--- a/misc.html
+++ b/misc.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
     <div class="row">
     <div class="col-lg-1" style="background-color: LightPink;">
-      <a href="index.html"><p>Main</p></a>
+      <a style="background-color:White; color:LightPink; border-color:DarkGreen; border-width:thick;" class="btn btn-info btn-block" href="index.html"><p>Main</p></a>
     </div>
     <div class="col-lg-11" style="background-color: DarkGreen;">
     <h1 class="text-center">Miscellaneous</h1>
